[package]
name = "mazes"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

[workspace]
members = [ "generator", "reloader", "engine" ]

[dependencies]
gl = "0.14.0"
rand = "0.8.3"
sdl2 = { version = "0.34.4", features = ["ttf"] }

generator = { path = "./generator" }
reloader = { path = "./reloader" }
engine = { path = "./engine" }

