[package]
name = "mazes"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

[workspace]
members = [ "generator", "reloader", "engine", "host_api" ]

[dependencies]
egui = "0.11.0"
egui-macroquad = "0.3.0"
gl = "0.14.0"
macroquad = "0.3.0"
rand = "0.8.3"

reloader = { path = "./reloader" }
engine = { path = "./engine" }

