[package]
name = "engine"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
libloading = "0.7.0"
rand = "0.8.3"
sdl2 = { version = "0.34.4", features = ["ttf"] }

generator = { path = "../generator" }
egui_sdl2_gl = "0.10.1"
egui = "0.10.0"
