[package]
name = "engine"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.11.0"
egui-macroquad = "0.3.0"
gl = "0.14.0"
libloading = "0.7.0"
macroquad = "0.3.0"
rand = "0.8.3"

host_api = { path = "../host_api" }
